<package>
  <name>tuw_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The tuw_rviz_plugins package</description>
  <maintainer email="markus.macsek@student.tuwien.ac.at">Markus Macsek</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
